<resources>
    <string name="app_name">TICON</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_logo">Navigation header logo</string>
    <string name="action_settings">Settings</string>
    <string name="place_holder">Lorem Ipsum</string>

    <string name="favorite">Favorite Emoticons</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="search">Search</string>

    <string name="ticon_phrase">SHOP YOUR ONLINE EMOTIONS</string>

    <string name="popular">POPULAR</string>
    <string name="for_you">FOR YOU</string>
    <string name="categories">CATEGORIES</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">HOME</string>
    <string name="menu_wishlist">WISHLIST</string>
    <string name="menu_my_emoticons">MY EMOTICONS</string>
    <string name="wishlist">WISHLIST</string>
    <string name="my_emoticons">MY EMOTICONS</string>

    <!--    Category Names-->
    <string name="funny"># FUNNY</string>
    <string name="character"># CHARACTER</string>
    <string name="new_">NEW</string>
    <string name="duck">Duck</string>
    <string name="animals"># ANIMALS</string>

    <string name="search_results">Search results for </string>
    <string name="search_label">Search</string>
    <string name="search_hint">Type here to search</string>
    <string name="settings_description">Settings description</string>

    <!--    Button Names-->
    <string name="preview">Preview in Chat</string>
    <string name="buy">Buy</string>

    <!--    Notifications-->
    <string name="no_results">Sorry, No Results Found</string>
    <string name="test_chat">This is a test chatroom for emoticon preview.</string>
    <string name="try_use">Try use the emoticons in a chatroom!</string>
    <string name="already_in_my_emoticons">This item is already in My Emoticons</string>
    <string name="added_to_my_emoticons">Added to My Emoticons</string>
</resources>