<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ticon.activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.ticon.activities.ui.wishlist.WishlistFragment"
        android:label="@string/menu_wishlist" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.ticon.activities.ui.myEmoticons.MyEmoticonsFragment"
        android:label="@string/menu_my_emoticons" />
</navigation>