<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/categories"
                android:textColor="#9E9E9E"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/mint_a100"
                        android:text="@string/funny" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white_300"
                        android:text="@string/cute" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="#80CBC4"
                        android:text="@string/animals" />
                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/popular"
                android:textColor="#9E9E9E"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/popularImageButton"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="13dp"
                        app:cardElevation="5dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/detailsButton"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:scaleType="fitCenter"
                                android:src="@drawable/duck_cry" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/duck"
                                android:textSize="20sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/popularImageButton2"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="13dp"
                        app:cardElevation="5dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:src="@drawable/duck_o"
                                android:scaleType="fitCenter"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/duck"
                                android:textSize="20sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/popularImageButton3"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="13dp"
                        app:cardElevation="5dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:src="@drawable/duck_x"
                                android:scaleType="fitCenter"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/duck"
                                android:textSize="20sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/popularImageButton4"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="13dp"
                        app:cardElevation="5dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:src="@drawable/duck_heart"
                                android:scaleType="fitCenter"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/duck"
                                android:textSize="20sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/for_you"
                android:textColor="#9E9E9E"
                android:textStyle="bold"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/forYouImageButton"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="13dp"
                        app:cardElevation="5dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:src="@drawable/duck_cry"
                                android:scaleType="fitCenter"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/duck"
                                android:textSize="20sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/forYouImageButton2"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="13dp"
                        app:cardElevation="5dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:src="@drawable/duck_o"
                                android:scaleType="fitCenter"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/duck"
                                android:textSize="20sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/forYouImageButton3"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="13dp"
                        app:cardElevation="5dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:src="@drawable/duck_x"
                                android:scaleType="fitCenter"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/duck"
                                android:textSize="20sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/forYouImageButton4"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="13dp"
                        app:cardElevation="5dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageButton
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:background="@color/white"
                                android:src="@drawable/duck_heart"
                                android:scaleType="fitCenter"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/duck"
                                android:textSize="20sp" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>